attempt to resolve scrollbar jump

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
 
 body {
   @apply items-center justify-center;
+  overflow-y: auto;
+  scrollbar-gutter: stable;
 }
 
 .title {
